fix: logs search view query fix, logs details view - attribute tags alignment fix (#4489)

--- a/frontend/src/container/LogDetailedView/FieldRenderer.styles.scss
+++ b/frontend/src/container/LogDetailedView/FieldRenderer.styles.scss
@@ -1,8 +1,9 @@
 .field-renderer-container {
 	display: flex !important;
 	gap: 8px;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: space-between;
+	flex-direction: column;
 
 	.label {
 		color: var(--text-robin-400);
